--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -184,3 +184,20 @@ div.desc {
     background-color: #4aaaa5;
     color: white;
 }
+
+@media screen and (max-width: 980px) {
+    body {
+      background-color: lightblue;
+    }
+}
+
+@media screen and (max-width: 760px) {
+    body {
+      background-color: lightpink;
+    }
+}
+@media screen and (max-width: 640px) {
+    body {
+      background-color: lightgreen;
+    }
+}
